# pachong

./: .cursorrules  .dockerignore  .env  .env.example  .flake8  .git-config  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PROJECT_STATUS.md  README.md  SECURITY.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_server.py  run_tests.py  serve_static.py  setup.py  start.py  test_api.py  test_crawler.py  tox.ini  vercel.json  webify.yaml
.cursor/rules/: ceshi.mdc
.github/: CODEOWNERS  FUNDING.yml  SUPPORT.md  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial.py  1cf80c7a9c86_initial_migration.py
config/: alembic.ini  config.json  config.py  export.json.example
data/: cookies.json  proxies.json
data/results/: 8a9c57ce-36f9-4306-b12e-b3a8a2278b76.json
data/tasks/: 8a9c57ce-36f9-4306-b12e-b3a8a2278b76.json
deploy/: docker-compose.yml  vercel.json
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: CHANGELOG.md  PROJECT_STATUS.md  README.md  api.md  architecture.md  database.md  deploy.md  deployment.md  dev_log.md  development.md  development_log.md  development_plan.md  monitoring.md  performance_testing.md  progress_tracking.md  project_structure.md  test_plan.md  testing.md  usage.md
docs/deployment/: README.md
docs/development/: README.md  architecture.md  development_log.md
docs/getting-started/: README.md
examples/: cache_crawler.py  config.env  crawler_example.py  example_article.html  export_example.py  generate_example.py
examples/concurrency/: adaptive_control.py
examples/monitoring/: custom_metrics.py
examples/resilience/: circuit_breaker.py
examples/security/: data_anonymization.py
frontend/: .env  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.vue  router.js
migrations/: env.py
prompts/: analyzer.json
src/: README.md  __init__.py  cli.py  config.py  main.py
src/api/: __init__.py  alert_api.py  crawler_api.py
src/cache/: README.md  cache_manager.py  cache_sync.py  local_cache.py  redis_cache.py
src/config/: __init__.py  config.py  database.py  settings.py
src/crawlers/: __init__.py  ai_crawler.py  base.py  base_crawler.py  bilibili.py  bilibili_crawler.py  bilibili_sign.py  cookie_generator.py  cookie_manager.py  crawler_factory.py  executor.py  manager.py  proxy_manager.py  proxy_pool.py  proxy_providers.py  scheduler.py  test_bilibili_crawler.py  test_cookie_generator.py  test_crawler.py  test_proxy_providers.py  test_xhs_crawler.py  xhs_crawler.py  xhs_sign.py  xiaohongshu.py
src/database/: __init__.py  backup.py  backup_scheduler.py  base.py  base_dao.py  base_storage.py  cache_storage.py  category_dao.py  comment_dao.py  config.py  connection_pool.py  content_dao.py  models.py  mongo_storage.py  platform_dao.py  report_dao.py  session.py  sqlite_storage.py  tag_dao.py  task_log_dao.py
src/export/: base.py  html.py
src/generators/: __init__.py
src/models/: __init__.py  base.py  category.py  content.py  content_tag.py  cookie.py  enums.py  error.py  generated_content.py  metrics.py  platform.py  proxy.py  report.py  request.py  tables.py  tag.py  task.py  task_log.py
src/monitor/: __init__.py  alert.py  alert_aggregator.py  alert_engine.py  alert_history.py  alert_notifier.py  alert_rule.py  alert_stats.py  base_monitor.py  business_monitor.py  (+9 more)
static/: index.html
tests/: README.md  conftest.py  generate_report.py  progress.json  progress_tracker.py  report.html  report_template.html  requirements.txt  test_ai_crawler.py  test_alert_engine.py  test_alert_notifier.py  test_analyzer.py  test_bilibili_crawler.py  test_client.py  test_config.py  test_cookie_manager.py  test_crawler.py  test_crawler_monitor.py  test_crawlers.py  test_environment.py  test_error_handler.py  test_export.py  test_exporter.py  test_format_registry.py  test_formatter.py  test_headers_manager.py  test_langsmith.py  test_llm_api.py  test_login.py  test_metrics_collector.py  test_models.py  test_monitor.py  test_processors.py  test_production.py  test_proxy_manager.py  test_proxy_pool.py  test_rate_limiter.py  test_retry.py  test_server.py  test_settings.py  (+8 more)
tools/: llm_api.py
(+130 files in other folders)
